upto-service-box

--- a/index.html
+++ b/index.html
@@ -97,11 +97,49 @@
             <div class="service_section">
                 <div class="container">
                     <h2>Our Services</h2>
-                    <div class="row d-flex justify-content-center">
+                    <div class="info_box_collection row d-flex justify-content-center">
                         <div class="info_box">
                             <h3>ATL</h3>
-                            <li>ATL</li>
-                            <div class="img bg-primary">
+                            <ul>
+                                <li>TVC</li>
+                                <li>print</li>
+                                <li>campaigns</li>
+                                <li>radio</li>
+                            </ul>
+                            <div class="img">
+                                <img src="./Assets/images/icon-1.png" alt="">
+                            </div>
+                        </div><div class="info_box">
+                            <h3>ATL</h3>
+                            <ul>
+                                <li>TVC</li>
+                                <li>print</li>
+                                <li>campaigns</li>
+                                <li>radio</li>
+                            </ul>
+                            <div class="img">
+                                <img src="./Assets/images/icon-1.png" alt="">
+                            </div>
+                        </div><div class="info_box">
+                            <h3>ATL</h3>
+                            <ul>
+                                <li>TVC</li>
+                                <li>print</li>
+                                <li>campaigns</li>
+                                <li>radio</li>
+                            </ul>
+                            <div class="img">
+                                <img src="./Assets/images/icon-1.png" alt="">
+                            </div>
+                        </div><div class="info_box">
+                            <h3>ATL</h3>
+                            <ul>
+                                <li>TVC</li>
+                                <li>print</li>
+                                <li>campaigns</li>
+                                <li>radio</li>
+                            </ul>
+                            <div class="img">
                                 <img src="./Assets/images/icon-1.png" alt="">
                             </div>
                         </div>
