--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <!-- intro fonts -->
     <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
 
+    <!-- owl carousel -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- boostrap cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -109,51 +118,108 @@
                             <div class="img">
                                 <img src="./Assets/images/icon-1.png" alt="">
                             </div>
-                        </div><div class="info_box">
-                            <h3>ATL</h3>
+                        </div>
+                        <div class="info_box">
+                            <h3>OOH</h3>
                             <ul>
-                                <li>TVC</li>
-                                <li>print</li>
-                                <li>campaigns</li>
-                                <li>radio</li>
+                                <li>in-shop Branding</li>
+                                <li>Outdoor Branding</li>
+                                <li>Events</li>
+                                <li>activation</li>
                             </ul>
                             <div class="img">
-                                <img src="./Assets/images/icon-1.png" alt="">
+                                <img src="./Assets/images/icon-2.png" alt="">
                             </div>
-                        </div><div class="info_box">
-                            <h3>ATL</h3>
+                        </div>
+                        <div class="info_box">
+                            <h3>digital advertising</h3>
                             <ul>
-                                <li>TVC</li>
-                                <li>print</li>
-                                <li>campaigns</li>
-                                <li>radio</li>
+                                <li>graphic & motion Ad</li>
+                                <li>content marketing</li>
+                                <li>social media marketing</li>
+                                <li>influence marketing</li>
                             </ul>
                             <div class="img">
-                                <img src="./Assets/images/icon-1.png" alt="">
+                                <img src="./Assets/images/icon-3.png" alt="">
                             </div>
-                        </div><div class="info_box">
-                            <h3>ATL</h3>
+                        </div>
+                        <div class="info_box">
+                            <h3>Media buy</h3>
                             <ul>
-                                <li>TVC</li>
+                                <li>TV</li>
                                 <li>print</li>
-                                <li>campaigns</li>
                                 <li>radio</li>
+                                <li>cinema hall</li>
                             </ul>
                             <div class="img">
-                                <img src="./Assets/images/icon-1.png" alt="">
+                                <img src="./Assets/images/icon-4.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <img src="./Assets/images/row-bg.png">
+            <div class="container">
+                <h2>Sky Rocket Your Brand <span>& Reach for the Stars!</span></h2>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <h2>Clients We’ve Worked With</h2>
+            <div class="owl-carousel container owl-theme">
+                <div class="item"><img src="./Assets/images/Group-1.png" alt=""></div>
+                <div class="item"><img src="./Assets/images/Group-2.png" alt=""></div>
+                <div class="item"><img src="./Assets/images/Group-3.png" alt=""></div>
+                <div class="item"><img src="./Assets/images/Group-4.png" alt=""></div>
+                <div class="item"><img src="./Assets/images/Group-5.png" alt=""></div>
+            </div>
+            
+        </div>
+        <div class="row">            
+        </div>
+
+    </div>
     </div>
 
+
+    <!-- jQuery cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- carousel cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+
+    <!-- jQuery  -->
+    <!-- <script src="./Assets/jQuery/index.js"></script> -->
 
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+    <script>
+        $('.owl-carousel').owlCarousel({
+            // stagePadding: 20,
+            loop: true,
+            margin: 60,
+            nav: true,
+            center:true,
+            autoplay:true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                800: {
+                    items: 5
+                }
+            }
+        })
+    </script>
 </body>
 
 </html>
