--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- fontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- boostrap cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -38,7 +40,7 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-4 logo">
-                            <img src="./Assets/images/logo.png">
+                            <a href="./index.html"><img src="./Assets/images/logo.png"></a>
                         </div>
                         <div class="col-md-6 col-3">
                             <nav class="navbar navbar-expand-lg">
@@ -50,16 +52,17 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ">
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">About Us</a>
+                                            <a class="nav-link active" aria-current="page" href="./About.html">About
+                                                Us</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Services</a>
+                                            <a class="nav-link" href="./Service.html">Services</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link">Projects</a>
+                                            <a class="nav-link" href="./Project.html">Projects</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link">Contact</a>
+                                            <a class="nav-link" href="./Contact.html">Contact</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link"><img src="./Assets/images/hamberger.png" alt=""></a>
@@ -159,28 +162,177 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="content_wrapper">
             <img src="./Assets/images/row-bg.png">
             <div class="container">
                 <h2>Sky Rocket Your Brand <span>& Reach for the Stars!</span></h2>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="client_carousel_section justify-content-center">
             <h2>Clients We’ve Worked With</h2>
-            <div class="owl-carousel container owl-theme">
+            <div class="owl-carousel client-carousel container owl-theme">
                 <div class="item"><img src="./Assets/images/Group-1.png" alt=""></div>
                 <div class="item"><img src="./Assets/images/Group-2.png" alt=""></div>
                 <div class="item"><img src="./Assets/images/Group-3.png" alt=""></div>
                 <div class="item"><img src="./Assets/images/Group-4.png" alt=""></div>
                 <div class="item"><img src="./Assets/images/Group-5.png" alt=""></div>
             </div>
-            
+
         </div>
-        <div class="row">            
+        <div class="Testimonials">
+            <h2>Testimonials</h2>
+            <div class="container ">
+                <div class="testimonials_wrapper owl-carousel owl-theme">
+                    <div class="item">
+                        <div class="img justify-content-center">
+                            <img src="./Assets/images/Group-1.png" alt="">
+                        </div>
+                        <div class="content">
+                            ACE is an
+                            established full service
+                            advertising agency. They
+                            have an excellent team who
+                            understands the client's
+                            business and needs of its
+                            consumers.
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="./Assets/images/Group-2.png" alt="">
+                        </div>
+                        <div class="content">
+                            We have ACE as
+                            our advertising agency
+                            for 10 years now,
+                            and we are very
+                            happy with them.
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="./Assets/images/Group-3.png" alt="">
+                        </div>
+                        <div class="content align-items-end">
+                            ACE is an established full service advertising agency. They have an excellent team who
+                            understands the client's business and needs of its consumers.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="team">
+            <h2>our team</h2>
+            <p>At Ace , it’s our people who make the company, and what we do, extraordinary.</p>
+            <div class="team_members">
+                <div class="member">
+                    <div class="img">
+                        <img src="./Assets/images/member.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Neetu Singh Chhetri</h3>
+                        <span>Co- Founder</span>
+                        <div class="icon">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="img">
+                        <img src="./Assets/images/member.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Neetu Singh Chhetri</h3>
+                        <span>Co- Founder</span>
+                        <div class="icon">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="img">
+                        <img src="./Assets/images/member.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Neetu Singh Chhetri</h3>
+                        <span>Co- Founder</span>
+                        <div class="icon">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="img">
+                        <img src="./Assets/images/member.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Neetu Singh Chhetri</h3>
+                        <span>Co- Founder</span>
+                        <div class="icon">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="img">
+                        <img src="./Assets/images/member.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Neetu Singh Chhetri</h3>
+                        <span>Co- Founder</span>
+                        <div class="icon">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer_section">
+            <div class="container">
+                <div class="row  align-items-center">
+                    <div class="col-6">
+                        <h2>contact us</h2>
+                        <div class="info">
+                            <h3>adress:</h3>
+                            <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
+
+                        </div>
+                        <div class="info">
+                            <h3>phone:</h3>
+                            <p> +977 14621812</p>
+
+                        </div>
+                        <div class="info">
+                            <h3>new business inquiries:</h3>
+                            <p>info@theacemedia.com, design.acemedia@gmail.com</p>
+                        </div>
+                        <div class="info">
+                            <h3>connect with us</h3>
+                            <span><i class="fa-brands fa-linkedin-in"></i></span>
+                            <span><i class="fa-brands fa-facebook-f"></i></span>
+                            <span><i class="fa-brands fa-instagram"></i></i></span>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+                        <img src="./Assets/images/map.png" alt="">
+                    </div>
+                    <div class="copy_right_section">
+                        Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
-    </div>
+
 
 
     <!-- jQuery cdn  -->
@@ -192,34 +344,12 @@
 
 
     <!-- jQuery  -->
-    <!-- <script src="./Assets/jQuery/index.js"></script> -->
+    <script src="./Assets/jQuery/index.js"></script>
 
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-
-    <script>
-        $('.owl-carousel').owlCarousel({
-            // stagePadding: 20,
-            loop: true,
-            margin: 60,
-            nav: true,
-            center:true,
-            autoplay:true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 3
-                },
-                800: {
-                    items: 5
-                }
-            }
-        })
-    </script>
 </body>
 
 </html>
