--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Service</title>
     <!-- google fonts  -->
     <!-- trajan fonts -->
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
@@ -75,31 +75,176 @@
                 </div>
             </div>
         </div>
-        <div class="about">
-            <div class="container">
-                <h2>About ACE</h2>
-                <div class="row  align-items-center justify-content-between">
-                    <div class="col-6  text_box">
-                        <p> Ace Media and Marketing is one of the experienced agency for communication, branding,
-                            and
-                            marketing services in Nepal. Print and digital media release services are proficiently
-                            provided to alleviate your branding concerns. We are the best fitting full-service
-                            marketing
-                            agency for your complete advertising needs, making communicating your brand simple and
-                            effective.
-                            360 degree advertising, if done properly, can take your brand to places it could never
-                            reach. As a full service agency, our greatest strength is our ability to think about all
-                            media and provide you with the best mix of traditional, digital or experiential
-                            campaigns.
-                            We present you ingenious advertising solutions that solve problems and enable brands to
-                            share their ideas with the world with little or no effort.</p>
+        <div class="service">
+
+            <h2>services</h2>
+            <div class="row justify-content-between align-items-center">
+                <div class="col-6 text_area">
+                    <h3>Above the line</h3>
+                    <p>Mass marketing techniques, which are primarily untargeted and aimed at establishing the
+                        brand, are included in above-the-line marketing. Everyone who has access to the medium
+                        receives the message.</p>
+                    <ul>
+                        <li>TVC
+                        </li>
+                        <li>Print
+                        </li>
+                        <li> Campaigns
+                        </li>
+                        <li>Radio</li>
+                    </ul>
+
+                </div>
+                <div class="col-6">
+                    <img src="./Assets/images/about-1.png" alt="">
+                </div>
+
+            </div>
+            <div class="row justify-content-between align-items-center">
+
+                <div class="col-6">
+                    <img src="./Assets/images/about-2.png" alt="">
+                </div>
+                <div class="col-6 text_area">
+                    <h3>Out of home branding</h3>
+                    <p>Advertising that is consumed outside of the home is referred to as out-of-home media,
+                        outdoor advertising. This includes advertisements encountered while ‘on the go’, such as
+                        billboards and wallscapes.</p>
+                    <ul>
+                        <li>In-Shop Branding
+
+                        </li>
+                        <li>Outdoor Branding
+
+                        </li>
+                        <li>Events
+
+                        </li>
+                        <li>Activation</li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="row justify-content-between align-items-center">
+                <div class="col-6 text_area">
+                    <h3>Digital Advertising</h3>
+                    <p>Digital advertising is a type of marketing that businesses use to advertise their brands, goods,
+                        and services on the digital market. As a result of the digital transformation, businesses now
+                        have a wider range of options for reaching their target audiences and the market as a whole.</p>
+                    <ul>
+                        <li>Graphic & Motion Ad
+
+                        </li>
+                        <li>Content Marketing
+
+                        </li>
+                        <li>Social Media Marketing
+
+                        </li>
+                        <li> Influencer Marketing</li>
+                    </ul>
+
+                </div>
+                <div class="col-6">
+                    <img src="./Assets/images/about-3.png" alt="">
+                </div>
+
+            </div>
+            <div class="row justify-content-between align-items-center">
+
+                <div class="col-6">
+                    <img src="./Assets/images/about-4.png" alt="">
+                </div>
+                <div class="col-6 text_area">
+                    <h3>Media Buy</h3>
+                    <p>Both conventional marketing channels (television, radio, print) and digital channels use the
+                        practice of media buying (websites, social media, streaming). Media buyers may maximize exposure
+                        among their target population while spending the least amount of money, when done effectively.
+                    </p>
+                    <ul>
+                        <li>TV
+
+
+                        </li>
+                        <li> Print
+
+
+                        </li>
+                        <li>Radio
+
+
+                        </li>
+                        <li>Cinema Hall</li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="screens_section">
+                <h2>led screens</h2>
+                <div class="screens_wrapper">
+
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/naxal-BBSM.png" alt="">
+                        </div>
+                        <div class="text">
+                            NAXAl BBSM
+                        </div>
                     </div>
-                    <div class="col-6 ">
-                        <img src="./Assets/images/about-section.png" alt="">
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/naxal-BBSM-copunter.png" alt="">
+                        </div>
+                        <div class="text">
+                            Naxal BBSM Counter
+                        </div>
+                    </div>
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/patan-BBSM.png" alt="">
+                        </div>
+                        <div class="text">
+                            Patan BBSM
+                        </div>
+                    </div>
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/Maharajgunj-BBSM.png" alt="">
+                        </div>
+                        <div class="text">
+                            Maharajgunj BBSM
+                        </div>
+                    </div>
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/Bouddha-BBSM.png" alt="">
+                        </div>
+                        <div class="text">
+                            Boudha BBSM
+                        </div>
+                    </div>
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/Jadibuti-BBSM.png" alt="">
+                        </div>
+                        <div class="text">
+                            Jadibuti
+                        </div>
+                    </div>
+                    <div class="screen">
+                        <div class="img">
+                            <img src="./Assets/images/Putalisadak-BBSM.png" alt="">
+                        </div>
+                        <div class="text">
+                            Putalisadak
+                        </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
+
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
@@ -138,6 +283,10 @@
             </div>
         </div>
     </div>
+    <!-- boostrap script cdn  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
