--- a/About.html
+++ b/About.html
@@ -74,75 +74,80 @@
                     <p>Logically Integrated to Diversify</p>
                 </div>
             </div>
-            <div class="about">
-                <div class="container">
-                    <h2>About ACE</h2>
-                    <div class="row  align-items-center justify-content-between">
-                        <div class="col-6  text_box">
-                            <p> Ace Media and Marketing is one of the experienced agency for communication, branding,
-                                and
-                                marketing services in Nepal. Print and digital media release services are proficiently
-                                provided to alleviate your branding concerns. We are the best fitting full-service
-                                marketing
-                                agency for your complete advertising needs, making communicating your brand simple and
-                                effective.
-                                360 degree advertising, if done properly, can take your brand to places it could never
-                                reach. As a full service agency, our greatest strength is our ability to think about all
-                                media and provide you with the best mix of traditional, digital or experiential
-                                campaigns.
-                                We present you ingenious advertising solutions that solve problems and enable brands to
-                                share their ideas with the world with little or no effort.</p>
-                        </div>
-                        <div class="col-6 ">
-                            <img src="./Assets/images/about-section.png" alt="">
-                        </div>
+        </div>
+        <div class="about">
+            <div class="container">
+                <h2>About ACE</h2>
+                <div class="row  align-items-center justify-content-between">
+                    <div class="col-6  text_box">
+                        <p> Ace Media and Marketing is one of the experienced agency for communication, branding,
+                            and
+                            marketing services in Nepal. Print and digital media release services are proficiently
+                            provided to alleviate your branding concerns. We are the best fitting full-service
+                            marketing
+                            agency for your complete advertising needs, making communicating your brand simple and
+                            effective.
+                            360 degree advertising, if done properly, can take your brand to places it could never
+                            reach. As a full service agency, our greatest strength is our ability to think about all
+                            media and provide you with the best mix of traditional, digital or experiential
+                            campaigns.
+                            We present you ingenious advertising solutions that solve problems and enable brands to
+                            share their ideas with the world with little or no effort.</p>
                     </div>
-                </div>
-            </div>
-            <div class="banner">
-                <div class="container">
-                    <img src="./Assets/images/banner-img.png" alt="">
-                </div>
-            </div>
-            <div class="footer_section">
-                <div class="container">
-                    <div class="row  align-items-center">
-                        <div class="col-6">
-                            <h2>contact us</h2>
-                            <div class="info">
-                                <h3>adress:</h3>
-                                <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
-
-                            </div>
-                            <div class="info">
-                                <h3>phone:</h3>
-                                <p> +977 14621812</p>
-
-                            </div>
-                            <div class="info">
-                                <h3>new business inquiries:</h3>
-                                <p>info@theacemedia.com, design.acemedia@gmail.com</p>
-                            </div>
-                            <div class="info">
-                                <h3>connect with us</h3>
-                                <span><i class="fa-brands fa-linkedin-in"></i></span>
-                                <span><i class="fa-brands fa-facebook-f"></i></span>
-                                <span><i class="fa-brands fa-instagram"></i></i></span>
-
-                            </div>
-
-                        </div>
-                        <div class="col-6">
-                            <img src="./Assets/images/map.png" alt="">
-                        </div>
-                        <div class="copy_right_section">
-                            Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
-                        </div>
+                    <div class="col-6 ">
+                        <img src="./Assets/images/about-section.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
+        <div class="banner">
+            <div class="container">
+                <img src="./Assets/images/banner-img.png" alt="">
+            </div>
+        </div>
+        <div class="footer_section">
+            <div class="container">
+                <div class="row  align-items-center">
+                    <div class="col-6">
+                        <h2>contact us</h2>
+                        <div class="info">
+                            <h3>adress:</h3>
+                            <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
+
+                        </div>
+                        <div class="info">
+                            <h3>phone:</h3>
+                            <p> +977 14621812</p>
+
+                        </div>
+                        <div class="info">
+                            <h3>new business inquiries:</h3>
+                            <p>info@theacemedia.com, design.acemedia@gmail.com</p>
+                        </div>
+                        <div class="info">
+                            <h3>connect with us</h3>
+                            <span><i class="fa-brands fa-linkedin-in"></i></span>
+                            <span><i class="fa-brands fa-facebook-f"></i></span>
+                            <span><i class="fa-brands fa-instagram"></i></i></span>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+                        <img src="./Assets/images/map.png" alt="">
+                    </div>
+                    <div class="copy_right_section">
+                        Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
+                    </div>
+                </div>
+            </div>
+        </div>
+   
     </div>
+    <!-- boostrap script cdn  -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+ crossorigin="anonymous"></script>
 </body>
 
 </html>
