--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="container">
-        <div id="about">
+        <div id="contact">
             <div class="header">
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
@@ -74,44 +74,93 @@
                     <p>Logically Integrated to Diversify</p>
                 </div>
             </div>
-            <div class="footer_section">
-                <div class="container">
-                    <div class="row  align-items-center">
-                        <div class="col-6">
-                            <h2>contact us</h2>
-                            <div class="info">
-                                <h3>adress:</h3>
-                                <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
 
-                            </div>
-                            <div class="info">
-                                <h3>phone:</h3>
-                                <p> +977 14621812</p>
+        </div>
+        <div class="contact">
+            <div class="title">
+                <h2>get in touch</h2>
+                <p>Why not connect with us to see why we might just be the right fit for your business...</p>
+            </div>
+            <div class="details_wrap">
+                <div class="box">
+                    <div class="icon">
+                        <img src="./Assets/images/call.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Call Us</h3>
+                        <span>Feel free to call us at</span>
+                        <p>+977 1 4621812</p>
 
-                            </div>
-                            <div class="info">
-                                <h3>new business inquiries:</h3>
-                                <p>info@theacemedia.com, design.acemedia@gmail.com</p>
-                            </div>
-                            <div class="info">
-                                <h3>connect with us</h3>
-                                <span><i class="fa-brands fa-linkedin-in"></i></span>
-                                <span><i class="fa-brands fa-facebook-f"></i></span>
-                                <span><i class="fa-brands fa-instagram"></i></i></span>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <img src="./Assets/images/email.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Drop a line</h3>
+                        <span>Drop us a line at</span>
+                        <p>info@acemedia.com</p>
 
-                            </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <img src="./Assets/images/location.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Visit Us</h3>
+                        <span>Prayag Marga, Minbhawan, Kathmandu</span>
+                        <p>Sun - Fri: 10am to 6pm</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="map">
+            <img src="./Assets/images/contact-map.png" alt="">
+        </div>
+        <div class="footer_section">
+            <div class="container">
+                <div class="row  align-items-center">
+                    <div class="col-6">
+                        <h2>contact us</h2>
+                        <div class="info">
+                            <h3>adress:</h3>
+                            <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
 
                         </div>
-                        <div class="col-6">
-                            <img src="./Assets/images/map.png" alt="">
+                        <div class="info">
+                            <h3>phone:</h3>
+                            <p> +977 14621812</p>
+
                         </div>
-                        <div class="copy_right_section">
-                            Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
+                        <div class="info">
+                            <h3>new business inquiries:</h3>
+                            <p>info@theacemedia.com, design.acemedia@gmail.com</p>
                         </div>
+                        <div class="info">
+                            <h3>connect with us</h3>
+                            <span><i class="fa-brands fa-linkedin-in"></i></span>
+                            <span><i class="fa-brands fa-facebook-f"></i></span>
+                            <span><i class="fa-brands fa-instagram"></i></i></span>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+                        <img src="./Assets/images/map.png" alt="">
+                    </div>
+                    <div class="copy_right_section">
+                        Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- boostrap script cdn  -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+ crossorigin="anonymous"></script>
 </body>
+
 </html>
