--- a/project.html
+++ b/project.html
@@ -5,13 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Project</title>
     <!-- google fonts  -->
     <!-- trajan fonts -->
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
 
     <!-- intro fonts -->
     <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
+
+    <!-- owl carousel -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <!-- fontAwesome -->
@@ -27,7 +37,7 @@
 
 <body>
     <div class="container">
-        <div id="about">
+        <div id="project">
             <div class="header">
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
@@ -74,45 +84,156 @@
                     <p>Logically Integrated to Diversify</p>
                 </div>
             </div>
-            <div class="footer_section">
+        </div>
+        <div class="project">
+            <div class="title">
+                <h2>Projects</h2>
+            </div>
+            <div class="televison">
+                <h2>Television Commercial</h2>
                 <div class="container">
-                    <div class="row  align-items-center">
-                        <div class="col-6">
-                            <h2>contact us</h2>
-                            <div class="info">
-                                <h3>adress:</h3>
-                                <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
+                    <div class="tv_wrapper owl-carousel owl-theme">
+                        <div class="item">
+                            <img src="./Assets/images/tv-1.png" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="./Assets/images/tv-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="campaign">
+                <h2>Experiential Campaign</h2>
+                <div class="container">
+                    <div class="campaign_wrapper owl-carousel owl-theme">
+                        <div class="item">
+                            <img src="./Assets/images/campaign-1.png" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="./Assets/images/campaign-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slider_wrap">
+                <div class="digital_campaign">
+                    <h2>Digital Campaign</h2>
+                    <div class="container">
+                        <div class="img_wrapper owl-carousel owl-theme">
+                            <div class="item">
+                                <img src="./Assets/images/digital-1.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./Assets/images/digital-2.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./Assets/images/digital-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="marketing">
+                    <h2>Exclusively Marketed by</h2>
+                    <div class="container">
+                        <div class="marketing_wrapper owl-carousel owl-theme">
+                            <div class="item">
+                                <img src="./Assets/images/market-1.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./Assets/images/market-2.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./Assets/images/market-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="showcase">
+                <h2>Creative Showcase</h2>
+                <div class="container">
+                    <div class="showcase_wrapper owl-carousel owl-theme">
+                        <div class="item">
+                            <img src="./Assets/images/showcase-1.png" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="./Assets/images/showcase-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="brands">
+                <h2>GT & MT Branding</h2>
+                <div class="container">
+                    <div class="brand_wrap owl-carousel owl-theme">
+                        <div class="item">
+                            <img src="./Assets/images/brand-1.png" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="./Assets/images/brand-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                            </div>
-                            <div class="info">
-                                <h3>phone:</h3>
-                                <p> +977 14621812</p>
+        </div>
 
-                            </div>
-                            <div class="info">
-                                <h3>new business inquiries:</h3>
-                                <p>info@theacemedia.com, design.acemedia@gmail.com</p>
-                            </div>
-                            <div class="info">
-                                <h3>connect with us</h3>
-                                <span><i class="fa-brands fa-linkedin-in"></i></span>
-                                <span><i class="fa-brands fa-facebook-f"></i></span>
-                                <span><i class="fa-brands fa-instagram"></i></i></span>
-
-                            </div>
+        <div class="footer_section">
+            <div class="container">
+                <div class="row  align-items-center">
+                    <div class="col-6">
+                        <h2>contact us</h2>
+                        <div class="info">
+                            <h3>adress:</h3>
+                            <p> Prayag marg <span>minbhawan,kathmandu</span> <span>nepal</span></p>
 
                         </div>
-                        <div class="col-6">
-                            <img src="./Assets/images/map.png" alt="">
+                        <div class="info">
+                            <h3>phone:</h3>
+                            <p> +977 14621812</p>
+
                         </div>
-                        <div class="copy_right_section">
-                            Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
+                        <div class="info">
+                            <h3>new business inquiries:</h3>
+                            <p>info@theacemedia.com, design.acemedia@gmail.com</p>
                         </div>
+                        <div class="info">
+                            <h3>connect with us</h3>
+                            <span><i class="fa-brands fa-linkedin-in"></i></span>
+                            <span><i class="fa-brands fa-facebook-f"></i></span>
+                            <span><i class="fa-brands fa-instagram"></i></i></span>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+                        <img src="./Assets/images/map.png" alt="">
+                    </div>
+                    <div class="copy_right_section">
+                        Copyright 2022 @ Ace Media & Marketing Pvt. Ltd.
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+    </div>
+    <!-- jQuery cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- carousel cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+
+    <!-- jQuery  -->
+    <script src="./Assets/jQuery/index.js"></script>
+
+    <!-- boostrap script cdn  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
