upto-about-us-responsed

--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
 
     <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
 
 
     <!-- fontAwesome -->
@@ -22,6 +22,8 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
+
+    <link rel="stylesheet" href="./Assets/css/response.css">
 
 </head>
 
@@ -34,7 +36,7 @@
                         <div class="col-4 logo">
                             <a href="./index.html"><img src="./Assets/images/logo.png"></a>
                         </div>
-                        <div class="col-md-6 col-3">
+                        <div class="col-lg-6 col-2">
                             <nav class="navbar navbar-expand-lg">
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -78,8 +80,8 @@
         <div class="about">
             <div class="container">
                 <h2>About ACE</h2>
-                <div class="row  align-items-center justify-content-between">
-                    <div class="col-6  text_box">
+                <div class="row about_sectioon align-items-center justify-content-between">
+                    <div class="col-lg-6  text_box">
                         <p> Ace Media and Marketing is one of the experienced agency for communication, branding,
                             and
                             marketing services in Nepal. Print and digital media release services are proficiently
@@ -94,7 +96,7 @@
                             We present you ingenious advertising solutions that solve problems and enable brands to
                             share their ideas with the world with little or no effort.</p>
                     </div>
-                    <div class="col-6 ">
+                    <div class="col-lg-6 img_box">
                         <img src="./Assets/images/about-section.png" alt="">
                     </div>
                 </div>
@@ -108,7 +110,7 @@
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
-                    <div class="col-6">
+                    <div class="text_section col-md-6">
                         <h2>contact us</h2>
                         <div class="info">
                             <h3>adress:</h3>
@@ -133,7 +135,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="./Assets/images/map.png" alt="">
                     </div>
                     <div class="copy_right_section">
