--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
 
     <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
 
 
     <!-- fontAwesome -->
@@ -158,9 +158,9 @@
         </div>
     </div>
     <!-- boostrap script cdn  -->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
- integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
- crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
