--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
 
     <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
 
     <!-- owl carousel -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -31,6 +31,8 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
+
+    <link rel="stylesheet" href="./Assets/css/response.css">
 </head>
 
 <body>
@@ -42,7 +44,7 @@
                         <div class="col-4 logo">
                             <a href="./index.html"><img src="./Assets/images/logo.png"></a>
                         </div>
-                        <div class="col-md-6 col-3">
+                        <div class="col-lg-6 col-2">
                             <nav class="navbar navbar-expand-lg">
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -85,14 +87,14 @@
             <div class="story_section">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-sm-6">
+                        <div class="col-lg-6">
                             <h2>Stories <span>of Ace Media</span> </h2>
                             <p>Ace Media & Marketing is a full-service marketing firm, that offers data-driven
                                 strategies
                                 and
                                 laser-focused creative services that produce a strong ROI.</p>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-lg-6">
                             <div class="img_section">
                                 <img src="./Assets/images/story.png" alt="">
                                 <div class="content_wrap">
@@ -222,81 +224,70 @@
             </div>
         </div>
         <div class="team">
-            <h2>our team</h2>
-            <p>At Ace , it’s our people who make the company, and what we do, extraordinary.</p>
-            <div class="team_members">
-                <div class="member">
-                    <div class="img">
-                        <img src="./Assets/images/member.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h3>Neetu Singh Chhetri</h3>
-                        <span>Co- Founder</span>
-                        <div class="icon">
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+            <div class="container">
+                <h2>our team</h2>
+                <p>At Ace , it’s our people who make the company, and what we do, extraordinary.</p>
+                <div class="team_members">
+                    <div class="member">
+                        <div class="img">
+                            <img src="./Assets/images/member.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>Neetu Singh Chhetri</h3>
+                            <span>Co- Founder</span>
+                            <div class="icon">
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="member">
-                    <div class="img">
-                        <img src="./Assets/images/member.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h3>Neetu Singh Chhetri</h3>
-                        <span>Co- Founder</span>
-                        <div class="icon">
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+                    <div class="member">
+                        <div class="img">
+                            <img src="./Assets/images/member.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>Neetu Singh Chhetri</h3>
+                            <span>Co- Founder</span>
+                            <div class="icon">
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="member">
-                    <div class="img">
-                        <img src="./Assets/images/member.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h3>Neetu Singh Chhetri</h3>
-                        <span>Co- Founder</span>
-                        <div class="icon">
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+                    <div class="member">
+                        <div class="img">
+                            <img src="./Assets/images/member.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>Neetu Singh Chhetri</h3>
+                            <span>Co- Founder</span>
+                            <div class="icon">
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="member">
-                    <div class="img">
-                        <img src="./Assets/images/member.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h3>Neetu Singh Chhetri</h3>
-                        <span>Co- Founder</span>
-                        <div class="icon">
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+                    <div class="member">
+                        <div class="img">
+                            <img src="./Assets/images/member.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>Neetu Singh Chhetri</h3>
+                            <span>Co- Founder</span>
+                            <div class="icon">
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="member">
-                    <div class="img">
-                        <img src="./Assets/images/member.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h3>Neetu Singh Chhetri</h3>
-                        <span>Co- Founder</span>
-                        <div class="icon">
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-linkedin"></i>
-                        </div>
-                    </div>
-                </div>
 
+                </div>
             </div>
         </div>
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
-                    <div class="col-6">
+                    <div class=" text_section col-md-6">
                         <h2>contact us</h2>
                         <div class="info">
                             <h3>adress:</h3>
@@ -321,7 +312,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="./Assets/images/map.png" alt="">
                     </div>
                     <div class="copy_right_section">
