--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
 
     <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
 
     <!-- owl carousel -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
