--- a/service.html
+++ b/service.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
 
     <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
 
 
     <!-- fontAwesome -->
@@ -22,6 +22,8 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
+
+    <link rel="stylesheet" href="./Assets/css/response.css">
 
 </head>
 
@@ -34,7 +36,7 @@
                         <div class="col-4 logo">
                             <a href="./index.html"><img src="./Assets/images/logo.png"></a>
                         </div>
-                        <div class="col-md-6 col-3">
+                        <div class="col-lg-6 col-2">
                             <nav class="navbar navbar-expand-lg">
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -79,7 +81,7 @@
 
             <h2>services</h2>
             <div class="row justify-content-between align-items-center">
-                <div class="col-6 text_area">
+                <div class="col-lg-6 text_area">
                     <h3>Above the line</h3>
                     <p>Mass marketing techniques, which are primarily untargeted and aimed at establishing the
                         brand, are included in above-the-line marketing. Everyone who has access to the medium
@@ -95,17 +97,17 @@
                     </ul>
 
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img src="./Assets/images/about-1.png" alt="">
                 </div>
 
             </div>
             <div class="row justify-content-between align-items-center">
 
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img src="./Assets/images/about-2.png" alt="">
                 </div>
-                <div class="col-6 text_area">
+                <div class="col-lg-6 text_area">
                     <h3>Out of home branding</h3>
                     <p>Advertising that is consumed outside of the home is referred to as out-of-home media,
                         outdoor advertising. This includes advertisements encountered while ‘on the go’, such as
@@ -126,7 +128,7 @@
                 </div>
             </div>
             <div class="row justify-content-between align-items-center">
-                <div class="col-6 text_area">
+                <div class="col-lg-6 text_area">
                     <h3>Digital Advertising</h3>
                     <p>Digital advertising is a type of marketing that businesses use to advertise their brands, goods,
                         and services on the digital market. As a result of the digital transformation, businesses now
@@ -145,17 +147,17 @@
                     </ul>
 
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img src="./Assets/images/about-3.png" alt="">
                 </div>
 
             </div>
             <div class="row justify-content-between align-items-center">
 
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img src="./Assets/images/about-4.png" alt="">
                 </div>
-                <div class="col-6 text_area">
+                <div class="col-lg-6 text_area">
                     <h3>Media Buy</h3>
                     <p>Both conventional marketing channels (television, radio, print) and digital channels use the
                         practice of media buying (websites, social media, streaming). Media buyers may maximize exposure
