--- a/project.html
+++ b/project.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
-    <!-- google fonts  -->
-    <!-- trajan fonts -->
-    <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
-
-    <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
-
+    <!-- normalize css cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- owl carousel -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -33,48 +30,44 @@
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
 
+    <link rel="stylesheet" href="./Assets/css/response.css">
+
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="overflow-x-hidden"> -->
         <div id="project">
             <div class="header">
-                <div class="container">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-4 logo">
-                            <a href="./index.html"><img src="./Assets/images/logo.png"></a>
-                        </div>
-                        <div class="col-md-6 col-3">
-                            <nav class="navbar navbar-expand-lg">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                    aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav ">
-                                        <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="./About.html">About
-                                                Us</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="./Service.html">Services</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="./Project.html">Projects</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="./Contact.html">Contact</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link"><img src="./Assets/images/hamberger.png" alt=""></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container">
+                        <a href="./index.html"><img src="./Assets/images/logo.png"></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./About.html">About
+                                        Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Service.html">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Project.html">Projects</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Contact.html">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link"><img src="./Assets/images/hamberger.png" alt=""></a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                </div>
+                </nav>
             </div>
             <div class="content_wrap">
                 <div class="main">
@@ -93,11 +86,15 @@
                 <h2>Television Commercial</h2>
                 <div class="container">
                     <div class="tv_wrapper owl-carousel owl-theme">
-                        <div class="item">
-                            <img src="./Assets/images/tv-1.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/tv-1.png" alt="">
+                            </div>
                         </div>
-                        <div class="item">
-                            <img src="./Assets/images/tv-2.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/tv-2.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -106,11 +103,15 @@
                 <h2>Experiential Campaign</h2>
                 <div class="container">
                     <div class="campaign_wrapper owl-carousel owl-theme">
-                        <div class="item">
-                            <img src="./Assets/images/campaign-1.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/campaign-1.png" alt="">
+                            </div>
                         </div>
-                        <div class="item">
-                            <img src="./Assets/images/campaign-2.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/campaign-2.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -120,14 +121,20 @@
                     <h2>Digital Campaign</h2>
                     <div class="container">
                         <div class="img_wrapper owl-carousel owl-theme">
-                            <div class="item">
-                                <img src="./Assets/images/digital-1.png" alt="">
+                            <div class="item d-flex align-items-center justify-content-center">
+                                <div class="item_wrap">
+                                    <img src="./Assets/images/digital-1.png" alt="">
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="./Assets/images/digital-2.png" alt="">
+                            <div class="item d-flex align-items-center justify-content-center">
+                                <div class="item_wrap">
+                                    <img src="./Assets/images/digital-2.png" alt="">
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="./Assets/images/digital-3.png" alt="">
+                            <div class="item d-flex align-items-center justify-content-center">
+                                <div class="item_wrap ">
+                                    <img src="./Assets/images/digital-3.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -136,14 +143,20 @@
                     <h2>Exclusively Marketed by</h2>
                     <div class="container">
                         <div class="marketing_wrapper owl-carousel owl-theme">
-                            <div class="item">
-                                <img src="./Assets/images/market-1.png" alt="">
+                            <div class="item d-flex align-items-center justify-content-center">
+                                <div class="item_wrap">
+                                    <img src="./Assets/images/market-1.png" alt="">
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="./Assets/images/market-2.png" alt="">
+                            <div class="item d-flex align-items-center justify-content-center">
+                                <div class="item_wrap">
+                                    <img src="./Assets/images/market-2.png" alt="">
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="./Assets/images/market-3.png" alt="">
+                            <div class="item d-flex align-items-center justify-content-center">
+                                <div class="item_wrap">
+                                    <img src="./Assets/images/market-3.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -153,11 +166,15 @@
                 <h2>Creative Showcase</h2>
                 <div class="container">
                     <div class="showcase_wrapper owl-carousel owl-theme">
-                        <div class="item">
-                            <img src="./Assets/images/showcase-1.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/showcase-1.png" alt="">
+                            </div>
                         </div>
-                        <div class="item">
-                            <img src="./Assets/images/showcase-2.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/showcase-2.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -166,11 +183,15 @@
                 <h2>GT & MT Branding</h2>
                 <div class="container">
                     <div class="brand_wrap owl-carousel owl-theme">
-                        <div class="item">
-                            <img src="./Assets/images/brand-1.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/brand-1.png" alt="">
+                            </div>
                         </div>
-                        <div class="item">
-                            <img src="./Assets/images/brand-2.png" alt="">
+                        <div class="item d-flex align-items-center justify-content-center">
+                            <div class="item_wrap">
+                                <img src="./Assets/images/brand-2.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -181,7 +202,7 @@
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
-                    <div class="col-6">
+                    <div class="col-md-6 text_section">
                         <h2>contact us</h2>
                         <div class="info">
                             <h3>adress:</h3>
@@ -206,7 +227,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="./Assets/images/map.png" alt="">
                     </div>
                     <div class="copy_right_section">
@@ -215,7 +236,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
 
     </div>
