--- a/service.html
+++ b/service.html
@@ -6,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service</title>
-    <!-- google fonts  -->
-    <!-- trajan fonts -->
-    <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
-
-    <!-- intro fonts -->
-    <link href="https://fonts.cdnfonts.com/css/intro-2" rel="stylesheet">
+    <!-- normalize css cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <!-- fontAwesome -->
@@ -28,45 +26,39 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
         <div id="service">
             <div class="header">
-                <div class="container">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-4 logo">
-                            <a href="./index.html"><img src="./Assets/images/logo.png"></a>
-                        </div>
-                        <div class="col-lg-6 col-2">
-                            <nav class="navbar navbar-expand-lg">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                    aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav ">
-                                        <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="./About.html">About
-                                                Us</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="./Service.html">Services</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="./Project.html">Projects</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="./Contact.html">Contact</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link"><img src="./Assets/images/hamberger.png" alt=""></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container">
+                        <a href="./index.html"><img src="./Assets/images/logo.png"></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./About.html">About
+                                        Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Service.html">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Project.html">Projects</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Contact.html">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link"><img src="./Assets/images/hamberger.png" alt=""></a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                </div>
+                </nav>
             </div>
             <div class="content_wrap">
                 <div class="main">
@@ -77,6 +69,7 @@
                 </div>
             </div>
         </div>
+
         <div class="service">
 
             <h2>services</h2>
@@ -246,7 +239,6 @@
 
 
         </div>
-
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
@@ -284,7 +276,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
